--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-ad-adPlay"
-    version="1.8">
+    id="cordova-plugin-adPlay"
+    version="2.1">
 	
     <name>Cordova adPlay plugin</name>
     <description>Show adPlay full screen ad and rewarded video ad</description>
